# analyst-agent

./: README.md  pyproject.toml  run.py
config/: task.yaml
src/analyst_agent/: __init__.py  agent.py  coordinator.py  memory.py  planner.py  tools.py
src/analyst_agent.egg-info/: PKG-INFO  SOURCES.txt
src/analyst_agent/agents/: analyst.py  presenter.py  researcher.py  reviewer.py
